--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'com.github.dcendents.android-maven'
 version = "1.0.0"
 group = "com.quansu.dialogdemo"
 
-def siteUrl = 'https://github.com/ShiHuiyun123/PracticeLibrary'
-def gitUrl = 'https://github.com/ShiHuiyun123/PracticeLibrary.git'
+def siteUrl = 'https://github.com/ShiHuiyun123/DialogDemo'
+def gitUrl = 'https://github.com/ShiHuiyun123/DialogDemo.git'
 
 
 android {
@@ -108,12 +108,70 @@ bintray {
     configurations = ['archives']
 }
  */
+
+
+
+install{
+
+    repositories.mavenInstaller {
+        // 生成pom.xml和参数
+        pom{
+            project {
+                packaging 'aar'
+                name  'DialogDemo'
+                url siteUrl
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+
+
+
+                developers {
+                    developer {
+                        id 'littlenorth'
+                        // 开发者的id。
+                        name 'littlenorth'
+                        // 开发者名字。
+                        email 'shymoon@foxmail.com'
+                        // 开发者邮箱。
+                    }
+                }
+
+
+                scm {
+                    connection gitUrl
+                    // Git仓库地址。
+                    developerConnection gitUrl
+                    // Git仓库地址。
+                    url siteUrl
+                    // 项目主页。
+                }
+
+            }
+        }
+
+    }
+
+
+}
+
+
+
+
+
+
+
+//上传到JCenter
 bintray {
     user ="littlenorth"
     key = "33145e28508e677a251d89ce4ef9319aa22a0f92"
+    configurations = ['archives']
     pkg {
         repo = "maven"
-        name = "PracticeLibs"    //发布到JCenter上的项目名字
+        name = "DialogDemo"    //发布到JCenter上的项目名字
 
         version {
             name = '1.0.1-practice'
